# taruvi-python-sdk

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPOSITORY_SUMMARY.md  SETUP_GUIDE.md  _unasync.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: function_async_execution.py  function_async_execution_async.py  secrets_demo.py
src/taruvi/: __init__.py  auth.py  client.py  config.py  exceptions.py  http_client.py  http_client_base.py  runtime.py  sync_client.py  sync_http_client.py  types.py  utils.py
src/taruvi/_async/: client.py  http_client.py
src/taruvi/_async/modules/: analytics.py  app.py  auth.py  database.py  functions.py  policy.py  secrets.py  settings.py  storage.py  users.py
src/taruvi/_sync/: client.py  http_client.py
src/taruvi/_sync/modules/: analytics.py  app.py  auth.py  database.py  functions.py  policy.py  secrets.py  settings.py  storage.py  users.py
src/taruvi/models/: __init__.py  app.py  auth.py  database.py  functions.py  policy.py  secrets.py  settings.py  storage.py
src/taruvi/modules/: __init__.py  app.py  auth.py  base.py  database.py  functions.py  policy.py  secrets.py  settings.py  storage.py  sync_auth.py  sync_database.py  sync_functions.py
tests/: README.md  __init__.py  conftest.py  test_aggregations.py  test_aggregations_async.py  test_analytics_integration.py  test_app_settings_integration.py  test_auth.py  test_auth_integration.py  test_auth_manager.py  test_client_factory.py  test_database.py  test_database_edges.py  test_database_integration.py  test_database_search.py  test_edges_live.py  test_functions_integration.py  test_imports.py  test_refactoring.py  test_secrets_integration.py  test_storage.py  test_storage_integration.py  test_utils.py
